--- a/index.html
+++ b/index.html
@@ -89,5 +89,14 @@ function startTimer() {
 }
     //  Coming soon -->   var add = window.confirm("You want have adds in this site to help us? (OK to confirm and cancel to disable adds)")
 </script>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-SH5NXTEVRF"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-SH5NXTEVRF');
+</script>
 </body>
 </html>
