--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <p>A quarta dica é fazer pausas regulares. Estudar por longos períodos de tempo pode ser cansativo e desmotivador, é importante fazer pausas regulares para alongar-se, tomar um café ou ir à casa-de-banho. Isso ajuda a manter o foco e a atenção durante o estudo.</p>
     <p>A quinta dica é fazer exercícios físicos regularmente. Fazer-los regularmente ajuda a melhorar a saúde física e mental, isso pode ajudar a aumentar a capacidade de concentração e a memória, além disso, fazer exercícios físicos pode ajudar a reduzir o estresse e a ansiedade.</p>
     <p>A sexta dica é dormir bem. Dormir bem é fundamental para a saúde física e mental. É importante dormir pelo menos 8 horas por dia. Isso ajuda a melhorar a capacidade de concentração e a memória. Além disso, dormir bem pode ajudar a reduzir o estresse e a ansiedade.</p>
-    <p>As músicas são do Bensound!</p>
+    <p>As músicas são do Bensound</p>
     <br>
 
   </main>
